--- a/index.html
+++ b/index.html
@@ -44,18 +44,108 @@
         </div>
       </nav>
       <!-- inizio container -->
-       <div class="container">
-        <div class="row row-cols-2  ">
-                <div>
-                    <div >
-                        <h1>catalogo libri</h1>
+       <div class="container-fluid ">
+        <div class="row justify-content-between ">
+                    <div class="col-8 col-md-9">
+                      <h1>catalogo libri</h1>
                     </div>
-                </div>
-                <div>
-                    <div><button type="button" class="btn btn-primary">Primary</button></div>
-                </div>
+                  <div class="col-4 col-md-3" >
+                      <div><button type="button" class="btn btn-primary">Aggiungi libro</button></div>
+                  </div>
         </div>
        </div>
+       <div class="container-fluid">
+        <div class="row ">
+        <table class="table table-striped ">
+          <thead class="row row-cols-3 justify-content-between">
+            <tr >
+             <th>titolo</th>
+            </tr>
+            <tr>
+              <th>stato</th>
+            </tr>
+            <tr >
+              <th>azioni</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+             <td>I pilastri della terra</td>
+             <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+             <td></td>
+            </tr>
+            <tr>
+             <td>I bromessi soosi</td>
+             <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+             <td></td>
+            </tr>
+            <tr>
+              <td>Il signore degli anelll</td>
+              <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Marrv Fotter e la pietra <br>
+                filosofale</td>
+              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Il codice Da Vinci</td>
+              <td><button type="button" class="btn btn-danger"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Non disponibile</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>snininc</td>
+              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>La divina commedia</td>
+              <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Il trono di spade</td>
+              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Il mondo di Sofia</td>
+              <td><button type="button" class="btn btn-danger"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Non disponibile</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Le cronache di Narnia: il leone, <br>
+                la strega e l'armadic</td>
+              <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Il piccolo principe</td>
+              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>la storia inunita</td>
+              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+              <td></td>
+            </tr>
+          </tbody>
+
+
+
+
+
+        </table>
+        </div>
+       </div>
+
+
+
+
+
+       
       
 
 
