--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark" >
@@ -16,24 +20,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Catalogo libri</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                <a class="nav-link" href="#">Anagrafica Utenti</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#">Storico Prestiti</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Help</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -44,102 +40,184 @@
         </div>
       </nav>
       <!-- inizio container -->
-       <div class="container-fluid ">
-        <div class="row justify-content-between ">
-                    <div class="col-8 col-md-9">
-                      <h1>catalogo libri</h1>
-                    </div>
-                  <div class="col-4 col-md-3" >
-                      <div><button type="button" class="btn btn-primary">Aggiungi libro</button></div>
-                  </div>
-        </div>
-       </div>
-       <div class="container-fluid">
+    <main>
+      <div class="container">
         <div class="row ">
-        <table class="table table-striped ">
-          <thead class="row row-cols-3 justify-content-between">
-            <tr >
-             <th>titolo</th>
-            </tr>
-            <tr>
-              <th>stato</th>
-            </tr>
-            <tr >
-              <th>azioni</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-             <td>I pilastri della terra</td>
-             <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-             <td></td>
-            </tr>
-            <tr>
-             <td>I bromessi soosi</td>
-             <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-             <td></td>
-            </tr>
-            <tr>
-              <td>Il signore degli anelll</td>
-              <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Marrv Fotter e la pietra <br>
-                filosofale</td>
-              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Il codice Da Vinci</td>
-              <td><button type="button" class="btn btn-danger"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Non disponibile</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>snininc</td>
-              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>La divina commedia</td>
-              <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Il trono di spade</td>
-              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Il mondo di Sofia</td>
-              <td><button type="button" class="btn btn-danger"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Non disponibile</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Le cronache di Narnia: il leone, <br>
-                la strega e l'armadic</td>
-              <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Il piccolo principe</td>
-              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>la storia inunita</td>
-              <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
-              <td></td>
-            </tr>
-          </tbody>
+          <div class="col-12 col-lg-8">
+            <div class="d-flex justify-content-between align-items-center">
+              <h1>catalogo libri</h1>
+              <button type="button" class="btn btn-primary">Aggiungi libro</button>
+            </div>
+            <!-- tabella -->
+            <table class="table table-striped ">
+              <thead class="row row-cols-3 justify-content-between">
+                <tr >
+                 <th>titolo</th>
+                 <th>Data prestito</th>
+                 <th>stato</th>
+                 <th>azioni</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="">
+                    <td>
+                      I pilastri della terra
+                    </td>
+                    <td>
+                      <button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button>
+                    </td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>I bromessi soosi</td>
+                  <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Il signore degli anelll</td>
+                  <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Marrv Fotter e la pietra <br>
+                    filosofale</td>
+                  <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Il codice Da Vinci</td>
+                  <td><button type="button" class="btn btn-danger"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Non disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>snininc</td>
+                  <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>La divina commedia</td>
+                  <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Il trono di spade</td>
+                  <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Il mondo di Sofia</td>
+                  <td><button type="button" class="btn btn-danger"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Non disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Le cronache di Narnia: il leone, <br>
+                    la strega e l'armadic</td>
+                  <td><button type="button" class="btn btn-warning"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">In prestito</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>Il piccolo principe</td>
+                  <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+                <tr>
+                  <td>la storia inunita</td>
+                  <td><button type="button" class="btn btn-success"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Disponibile</button></td>
+                    <td class="row row-cols-2">
+                      <button class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                      </button>
+                      <button class="btn btn-outline-secondary">
+                        <i class=" fa-solid fa-trash"></i>
+                      </button>
+                    </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="">
 
-
-
-
-
-        </table>
+          </div>
         </div>
-       </div>
+      </div>
+    </main>
 
 
 
